--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,14 @@ label{
 	font-size: 13px;
 }
 
+.pagination {
+    margin: 0px 0;
+}
+
+.glyphicon{
+    line-height: inherit;
+}
+
 /* navbar */
 
 .navbar {
@@ -63,11 +71,12 @@ label{
 }
 
 .footer p{
-	margin: 0px;
+	margin: 15px 0px 0px 0px;
 	padding: 5px 0px;
 	text-align: right;
 	font-size: 12px;
 }
+
 
 /* Login */
 
