--- a/css/style.css
+++ b/css/style.css
@@ -80,47 +80,21 @@ label{
 
 /* Login */
 
-.auth {
-    width: 340px;
-    margin: 0 auto;
+.login-box .input-group{
+	display:inherit;
+}
+
+.col-md-4 .well{
+    background-color: #fff;
 }
 
 .auth-logo{
-	margin-top: 10%;
+	margin-top: 15%;
     height: 105px;
 	background: url("../img/logo_105p.png") no-repeat center; 
 }
 
-.auth-box{
-	position: relative;
-	padding: 20px;
-    font-size: 14px;
-    background-color: #fff;
-    border: 1px solid #d8dee2;
-	border-top: 1px solid #d8dee2;
-    border-radius: 5px;	
-}
-
-.auth-form label{
-    display: block;
-    margin-bottom: 7px;
-    font-weight: normal;
-}
-
-.auth-imput{
-	display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-	margin-top: 5px;
-    margin-bottom: 15px;
-    color: #555;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.auth-btn {
+.btn-login {
 	position: relative;
 	padding: 6px 12px;
     display: block;
@@ -128,7 +102,6 @@ label{
     text-align: center;
     margin-top: 20px;
     color: #fff;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.15);
     font-weight: bold;
     line-height: 20px;
     color: #333;
