--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,32 @@ a{
 	text-decoration: none;
 }
 
+/* unvisited link */
+a:link {
+	text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+	text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+	text-decoration: none;
+}
+
+/* selected link */
+a:active {
+	text-decoration: none;
+}
+
 label{
 	font-size: 13px;
 }
 
 .pagination {
     margin: 0px 0;
-}
-
-.glyphicon{
-    line-height: inherit;
 }
 
 /* navbar */
