Inclusão da função remover
Implementada a função de remover o usuario. o usuario nao é deletado do
banco de dados, ele é setado o status para 0, indicando que ele esta
desativdo.

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ label{
 .navbar-header img{
 	padding: 12px 0px;
 }
+
+.nav li a{
+	text-transform: capitalize;
+}
 /* contend */
 
 .container{
@@ -83,7 +87,7 @@ label{
 }
 
 .sidebar{
-	height: 390px; 
+	aheight: 390px; 
 }
 
 .footer p{
